fix: footer visibility

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -158,6 +158,9 @@ footer {
   #search input {
     margin-bottom: 7rem;
   }
+  footer {
+    visibility: hidden;
+  }
 }
 
 @media (max-width: 1005px) and (min-width: 755px) {
